# kanji_test_generator

./: .gitignore  AGENTS.md  README.md  __init__.py  chrome_version.txt  mypy.ini  pyproject.toml  requirements.txt  requirements_current.txt  ruff.toml  start_app.bat  start_app_advanced.bat  start_app_dev.bat  test_app.py
.cursor/rules/: command_execution.mdc  error_handling.mdc  git.mdc  global.mdc  implementation_workflow.mdc  logging.mdc  mcp.mdc  openspec.mdc  reference.mdc
.github/workflows/: ci.yml
.serena/: project.yml
assets/: print.css
data/: attempts.csv  problems.csv
docs/: 20250127_implementation_auto_extraction.md  20250127_implementation_auto_scoring.md  20250127_implementation_error_handling.md  20250127_implementation_history_enhancement.md  20250127_implementation_priority_plan.md  20250127_implementation_remove_unused_pages.md  20250127_implementation_scoring_enhancement.md  20250127_implementation_scoring_ui.md  20250127_implementation_search_functionality.md  20250127_implementation_statistics_functionality.md  20250128_implementation_blank_page_analysis.md  Kanji Test Generator要件定義・設計ドラフト.md  directorystructure.md  implementation.md  naming_conventions.md  tag_history.md  アプリ素案.md
docs/implementation/: 20250127_implementation_auto_extraction.md  20250127_implementation_auto_scoring.md  20250127_implementation_duplicate_check_fix.md  20250127_implementation_font_size_adjustment.md  20250127_implementation_print_ui_improvement.md  20250127_implementation_problem_creation_flow_improvement.md  20250127_implementation_reset_button_fix.md  20250127_implementation_scoring_enhancement.md  20250127_implementation_scoring_ui.md  20250127_implementation_sidebar_improvement.md  20250127_implementation_statistics_functionality.md  20260113_implementation_extraction_patterns_expansion.md
docs/reference/: apple_GUI_guidline_color.md  apple_GUI_guidline_layout.md
openspec/specs/data-management/: spec.md
openspec/specs/history-management/: spec.md
openspec/specs/print-generation/: spec.md
scripts/: clean_data.py  dedupe_problems.py  fix_data_integrity.py
src/: app.py
src/modules/: __init__.py  backup.py  error_handler.py  health_check.py  logger.py  models.py  print_page.py  rendering.py  search.py  statistics.py  storage.py  utils.py  validators.py
templates/: print_page.html
tests/: test_duplicate_check_fix.py  test_error_handling.py  test_final_fixes.py  test_history_enhancement.py  test_models.py  test_scoring_enhancement.py  test_search_functionality.py  test_statistics_functionality.py  test_storage.py  test_ui_fixes.py  test_ui_improvements.py
(+4 files in other folders)
